--- a/src/main/resources/templates/customer/account_transfer.html
+++ b/src/main/resources/templates/customer/account_transfer.html
@@ -23,14 +23,13 @@
 <body>
 <div th:replace="fragments/header :: navLogout"/>
 
-<h1>Welcome to The Bank of your Trust</h1>
-<h3>Login Success</h3>
-<p>Today is <span th:text="${today}"/></p>
-<p>Todo: Tranferform ... </p>
-
-
 <div style="max-width: 1000px; margin: 100px auto auto;">
-    <form th:action="@{'/accounts/'+${accountId}+'/transfers?action='+${action}}" th:object="${transfer}" method="post">
+
+    <div class="form-row justify-content-center" style="max-width: 100%">
+    <h1>Please fill in the transfer form</h1>
+    </div>
+
+    <form th:action="@{'/accounts/'+${accountId}+'/transfers?action='+${action}}" th:object="${transfer}" method="post" style="margin-top: 20px">
         <div class="form-row justify-content-center" style="max-width: 100%">
             <div class="form-group col-md-3">
                 <label for="inputForename">Forename</label>
