--- a/src/main/resources/templates/fragments/table.html
+++ b/src/main/resources/templates/fragments/table.html
@@ -14,8 +14,14 @@
             style="cursor: pointer">
             <td th:text="${custStat.count}">1</td>
             <td th:text="${account.iban}" style="text-align: left;">DE123456789</td>
-            <td th:text="${#numbers.formatDecimal(account.balance/100, 1, 'DEFAULT', 2, 'DEFAULT')}"
-                style="text-align: right;">1000
+            <td th:if="${account.balance ge 0}" style="text-align: right; color: forestgreen">
+							<span
+                                    th:text="'+' + ${#numbers.formatDecimal(account.balance/100, 1, 'DEFAULT', 2, 'DEFAULT')}">Amount</span><span> €</span>
+            </td>
+            <td th:if="${account.balance lt 0}" style="text-align: right; color: red;">
+                            <span
+                                    th:text="'-' + ${#numbers.formatDecimal(account.balance/100, 1, 'DEFAULT', 2, 'DEFAULT')}">Amount</span><span> €</span>
+            </td>
             </td>
         </tr>
     </table>
@@ -45,19 +51,20 @@
                 <td th:text="${transfer.receiverAccount.customer.getFullName()}"></td>
                 <td th:text="${transfer.payerAccount.customer.getFullName()}"></td>
                 <div th:switch="${transfer.receiverAccount.getId()}">
-                    <td th:case="${account.id}" style="text-align: right;">
-							<span style="color: springgreen"
-                                  th:text="'+' + ${#numbers.formatDecimal(transfer.getAmount()/100, 1, 'DEFAULT', 2, 'DEFAULT')}">Betrag</span><span> €</span>
+                    <td th:case="${account.id}" style="text-align: right; color: forestgreen">
+							<span
+                                    th:text="'+' + ${#numbers.formatDecimal(transfer.getAmount()/100, 1, 'DEFAULT', 2, 'DEFAULT')}">Amount</span><span> €</span>
                     </td>
-                    <td th:case="*" style="text-align: right;">
-                            <span style="color: red"
-                                  th:text="'-' + ${#numbers.formatDecimal(transfer.getAmount()/100, 1, 'DEFAULT', 2, 'DEFAULT')}">Betrag</span><span> €</span>
+                    <td th:case="*" style="text-align: right; color: red;">
+                            <span
+                                    th:text="'-' + ${#numbers.formatDecimal(transfer.getAmount()/100, 1, 'DEFAULT', 2, 'DEFAULT')}">Amount</span><span> €</span>
                     </td>
                 </div>
             </tr>
 
 
-            <tr th:id="'accordion_'+${transfer.id}" class="collapse" th:style="${transfer.getDateCreated() == null && transfer.getDateCreated() == ''} ? 'display:none' : ''">
+            <tr th:id="'accordion_'+${transfer.id}" class="collapse"
+                th:style="${transfer.getDateCreated() == null && transfer.getDateCreated() == ''} ? 'display:none' : ''">
                 <td colspan="4">
                     <div th:style="${transfer.getDateCreated() == null} ? 'display:none' : 'display:block'">
                             <span class="text-primary"
