--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -78,7 +78,7 @@
 
             <div class="form-group col-md-2"></div>
         </div>
-        <div class="form-group form-row justify-content-center">
+        <div class="form-group form-row justify-content-center" style="max-width: 100%">
             <div class="form-check">
                 <input class="form-check-input" type="checkbox" id="gridCheck" required>
                 <label class="form-check-label" for="gridCheck">
