--- a/src/main/resources/templates/customer/account.html
+++ b/src/main/resources/templates/customer/account.html
@@ -56,7 +56,7 @@
 
 </div>
 
-
+<!-- todo buttons je nachdem, ob customer oder employee daher kommt -->
 <div class="col-md-8 mx-auto" style="margin-top: 50px; "/>
 <div class="btn-toolbar">
     <form th:action="@{/accounts/{accountId}/transfers/new(accountId=${account.id})}" method="GET">
