--- a/src/main/resources/templates/employee/customer.html
+++ b/src/main/resources/templates/employee/customer.html
@@ -19,7 +19,7 @@
 <div th:replace="fragments/header :: navLogout"/>
 
 
-<p>Todo: Adresse, Accounts, ... </p>
+<!-- todo Adresse, Accounts, ... -->
 <div class="row">
     <div class="col-md-8 mx-auto">
         <h1>Welcome to The Bank of your Trust</h1>
