--- a/src/main/resources/templates/customer/account_apply.html
+++ b/src/main/resources/templates/customer/account_apply.html
@@ -39,6 +39,7 @@
         </div>
 
         <div class="form-row justify-content-center">
+            <!--todo cancle button not working-->
             <button class="btn" onclick="goBack()">Cancel</button>
             <button type="submit" class="btn btn-primary" th:href="@{/accounts}">Request</button>
         </div>
