--- a/src/main/resources/templates/customer/account_apply.html
+++ b/src/main/resources/templates/customer/account_apply.html
@@ -26,15 +26,15 @@
     <form th:action="@{/accounts}" th:object="${accountRequest}" method="post" style="margin-top: 20px">
         <div class="form-row justify-content-center">
             <div class="form-group col-md-2">
-                <label for="inputSurname">Monthly Income</label>
-                <input type="number" th:field="*{monthlyIncome}" class="form-control" id="inputSurname" required>
+                <label for="inputMonthlyIncome">Monthly Income</label>
+                <input type="number" th:field="*{monthlyIncome}" min="1" class="form-control" id="inputMonthlyIncome" required>
             </div>
             <div class="form-group col-md-4"></div>
         </div>
         <div class="form-row justify-content-center">
             <div class="form-group col-md-6">
                 <label for="inputReason">Reason</label>
-                <textarea class="form-control" id="inputReason" rows="3" th:field="*{reason}" required></textarea>
+                <textarea class="form-control" id="inputReason" rows="3" minlength="5" th:field="*{reason}" required></textarea>
             </div>
         </div>
 
