--- a/src/main/resources/templates/employee/address.html
+++ b/src/main/resources/templates/employee/address.html
@@ -56,8 +56,8 @@
         </div>
 
         <div class="form-row justify-content-center" style="max-width: 100%">
-            <button class="btn" onclick="goBack()">Cancel</button>
-            <button type="submit" class="btn btn-primary" th:href="@{'/mgmt/customers/'+${customerId}+'/address'}">
+            <button type="submit" class="btn" name="action" value="cancel">Cancel</button>
+            <button type="submit" class="btn btn-primary" name="action" value="update">
                 Update
             </button>
         </div>
