--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -43,7 +43,7 @@
 <div th:replace="fragments/header :: navLogout"/>
 
 
-<div-- class="row" style="max-width: 100%; margin-top: 20px;">
+<div class="row" style="max-width: 100%; margin-top: 20px;">
     <div class="col-md-8 mx-auto">
         <h1>Welcome to The Bank of your Trust</h1>
         <h2 th:if="${name}">Hello <span th:text="${name}"/>, have a nice day! </h2>
@@ -53,10 +53,12 @@
         <div style="clear: both">
             <h3 style="color: forestgreen; float: left" th:if="${info}" th:text="${info}"></h3>
             <h3 style="color: firebrick; float: left" th:if="${error}" th:text="${error}"></h3>
-            <h3 th:if="${customer && not #lists.isEmpty(accounts) && totalBalance ge 0}" style="color: forestgreen; float: right">
+            <h3 th:if="${customer && not #lists.isEmpty(accounts) && totalBalance ge 0}"
+                style="color: forestgreen; float: right">
                 <span th:text="${#numbers.formatDecimal(totalBalance/100, 1, 'DEFAULT', 2, 'DEFAULT')}">Amount</span><span> €</span>
             </h3>
-            <h3 th:if="${customer && not #lists.isEmpty(accounts) && totalBalance lt 0}" style="color: red; float: right">
+            <h3 th:if="${customer && not #lists.isEmpty(accounts) && totalBalance lt 0}"
+                style="color: red; float: right">
                 <span th:text="${#numbers.formatDecimal(totalBalance/100, 1, 'DEFAULT', 2, 'DEFAULT')}">Amount</span><span> €</span>
             </h3>
         </div>
@@ -68,25 +70,11 @@
     </div>
 
 
-
-    <!--div class="col-md-8 mx-auto" th:if="${not customer}">
-        <div class="form-group float-right"
-             th:if="${not #lists.isEmpty(customers) || not #lists.isEmpty(accounts)}">
-            <input type="text" class="search form-control" placeholder="Searching..">
-        </div>
-        <span class="counter float-right"></span>
-    </div-->
-
-
-
-
     <div class="col-md-8 mx-auto" th:if="${not customer}">
         <div class="form-group float-right">
-            <input type="text" class="search form-control" placeholder="Searching..">
-
             <form th:action="@{/mgmt/customers/search}" method="get">
-                <input type="test" class="search form-control" th:name="queryString" th:placeholder="Searching.." />
-                    <button type="submit" hidden>Reset</button>
+                <input type="test" class="search form-control" th:name="queryString" th:placeholder="Search.."/>
+                <button type="submit" hidden>Reset</button>
             </form>
 
         </div>
@@ -94,10 +82,8 @@
     </div>
 
 
-
-
     <div class="col-md-8 mx-auto" th:if="${not customer}">
-        <table class="table table-hover results" style="margin-top: 50px; width: 100%"
+        <table class="table table-hover results" style="width: 100%"
                th:if="${customers != null && not #lists.isEmpty(customers)}"
                id="customerTable">
             <thead>
@@ -130,7 +116,36 @@
         </script>
     </div>
 
-    <div class="col-md-8 mx-auto" >
+
+    <div class="col-md-8 mx-auto" th:if="${not customer && queryCustomers != null && queryCustomers}">
+
+        <nav aria-label="Page navigation example">
+            <ul class="pagination">
+                <li class="page-item" th:classappend="${totalPages eq 0 || currentPage eq 1} ? 'disabled' : ''">
+                    <a class="page-link" th:if="${currentPage != 1}"
+                       th:href="@{${'/mgmt/customers/search'}(queryString=${queryString},page=${currentPage - 1})}">Previous</a>
+                    <a class="page-link" th:if="${currentPage ==1}" href="javascript:void(0);">Previous</a>
+                </li>
+
+                <li class="page-item" th:each="pageNo : ${#numbers.sequence(1, totalPages)}"
+                    th:classappend="${currentPage eq pageNo}? 'active' : ''">
+                    <a class="page-link" th:if="${currentPage  eq pageNo}" href="javascript:void(0);"
+                       th:text="${pageNo}"></a>
+                    <a class="page-link" th:if="${not (currentPage  eq pageNo)}"
+                       th:href="@{${'/mgmt/customers/search'}(queryString=${queryString},page=${pageNo})}"
+                       th:text="${pageNo}"></a>
+                </li>
+                <li class="page-item" th:classappend="${currentPage ge totalPages} ? 'disabled' : ''">
+                    <a class="page-link" th:if="${currentPage != totalPages}"
+                       th:href="@{${'/mgmt/customers/search'}(queryString=${queryString},page=${currentPage + 1})}">Next</a>
+                    <a class="page-link" th:if="${currentPage ge totalPages}" href="javascript:void(0);">Next</a>
+                </li>
+            </ul>
+        </nav>
+
+    </div>
+
+    <div class="col-md-8 mx-auto">
         <div class="btn-toolbar">
             <form th:if="${customer}" th:action="@{/accounts/opening}" method="GET">
                 <button type="submit" class="btn btn-primary" th:href="@{/accounts/opening}">
@@ -140,44 +155,7 @@
         </div>
     </div>
 
-    <script type="text/javascript" th:src="@{/js/searchInTable.js}"></script>
-
 </div>
-
-
-<!--script>
-    $(document).ready(function () {
-        $(".search").keyup(function () {
-            var searchTerm = $(".search").val();
-            var listItem = $('.results tbody').children('tr');
-            var searchSplit = searchTerm.replace(/ /g, "'):containsi('")
-
-            $.extend($.expr[':'], {
-                'containsi': function (elem, i, match, array) {
-                    return (elem.textContent || elem.innerText || '').toLowerCase().indexOf((match[3] || "").toLowerCase()) >=
-                        0;
-                }
-            });
-
-            $(".results tbody tr").not(":containsi('" + searchSplit + "')").each(function (e) {
-                $(this).attr('visible', 'false');
-            });
-
-            $(".results tbody tr:containsi('" + searchSplit + "')").each(function (e) {
-                $(this).attr('visible', 'true');
-            });
-
-            var jobCount = $('.results tbody tr[visible="true"]').length;
-            $('.counter').text(jobCount + ' item');
-
-            if (jobCount == '0') {
-                $('.no-result').show();
-            } else {
-                $('.no-result').hide();
-            }
-        });
-    });
-</script-->
 
 
 </body>
