--- a/src/main/resources/templates/fragments/chat.html
+++ b/src/main/resources/templates/fragments/chat.html
@@ -14,7 +14,8 @@
             </tr>
         </table>
     </div>
-    <form style="max-width: 100%; height: 10%" th:action="@{/supportChat/message/new}"
+    // todo chatId field anpassen
+    <form style="max-width: 100%; height: 10%" th:action="@{/support/{id}/messages/new(id=$chatID)}"
           method="post">
         <div class="form-row justify-content-center" style="max-width: 100%">
 
