--- a/src/main/resources/templates/fragments/chat.html
+++ b/src/main/resources/templates/fragments/chat.html
@@ -14,14 +14,14 @@
             </tr>
         </table>
     </div>
-    // todo chatId field anpassen
-    <form style="max-width: 100%; height: 10%" th:action="@{/support/{id}/messages/new(id=$chatID)}"
+
+    <form style="max-width: 100%; height: 10%" th:action="@{/support/messages/new}"  th:object="${message}"
           method="post">
         <div class="form-row justify-content-center" style="max-width: 100%">
 
             <div class="form-group col-md-6">
     <textarea class="form-control float-left" name="message" placeholder="Write your question..."
-              autofocus></textarea>
+              autofocus th:field="*{text}"></textarea>
             </div>
             <div class="form-group col-md-3">
                 <button class="btn btn-primary float-left" type="submit" value="submit">Send</button>
